# Credit-Card-Transaction-ETL-Project

./: .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
api/: Dockerfile  README.md  requirements.txt
api/src/: main.py
api/src/app/: datamanagement.py
dags/: dags_config.py  extract_functions.py  load_functions.py  transform_functions.py
docs/db/: model-credit-card-transactions.mwb
notebooks/: 00_data_load.ipynb  01_API_integration.ipynb  01_EDA.ipynb  01_data_load.ipynb  02_cleaning.ipynb  02_dimensional_model.ipynb  03_API_eda.ipynb  03_visualization.ipynb
reports/dashboard/: advise.md  info.md
reports/pdf/: advise.md  info.md
sql/: raw_table_schema.sql  schema.sql  schema_clean.sql
sql/dimensions/schemas/: category_dim.sql  client_dim.sql  date_dim.sql  fact_T_transation_dim.sql  job_dim.sql  location_dim.sql  merchant_dim.sql  state_dim.sql
sql/queries/: 003_get_raw_data.sql  004_get_raw_data.sql  005_get_clean_data.sql  info.md
sql/sample/: schema_clean.sql
src/: info.md  main.py
src/connections/: db.py
src/utils/: credentials_management.py  dimension_creation.py  kafka.py  pysqlschema.py
